dejar configuracion de primary cable y cache

--- a/config/database.yml
+++ b/config/database.yml
@@ -24,7 +24,16 @@ test:
 # Store production database in the storage/ directory, which by default
 # is mounted as a persistent Docker volume in config/deploy.yml.
 production:
-  adapter: postgresql
-  encoding: unicode
-  url: <%= ENV["DATABASE_URL"] %>
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  primary: &primary_production
+    adapter: postgresql
+    encoding: unicode
+    url: <%= ENV["DATABASE_URL"] %>
+    pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+    
+  cable:
+    <<: *primary_production
+    migrations_paths: db/cable_migrate
+  
+  cache:
+    <<: *primary_production
+    migrations_paths: db/cache_migrate
