--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,22 +6,14 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
-# Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
-# amazon:
-#   service: S3
-#   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-#   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-#   region: us-east-1
-#   bucket: your_own_bucket-<%= Rails.env %>
-
-# Remember not to checkin your GCS keyfile to a repository
-# google:
-#   service: GCS
-#   project: your_project
-#   credentials: <%= Rails.root.join("path/to/gcs.keyfile") %>
-#   bucket: your_own_bucket-<%= Rails.env %>
-
-# mirror:
-#   service: Mirror
-#   primary: local
-#   mirrors: [ amazon, google, microsoft ]
+google:
+  service: GCS
+  project: <%= ENV.fetch("GCS_PROJECT_ID") %>
+  credentials:
+    type: service_account
+    project_id: <%= ENV.fetch("GCS_PROJECT_ID") %>
+    private_key_id: <%= ENV.fetch("GCS_PRIVATE_KEY_ID") %>
+    private_key: "<%= ENV.fetch('GCS_PRIVATE_KEY').gsub('\\n', '\n') %>"
+    client_email: <%= ENV.fetch("GCS_CLIENT_EMAIL") %>
+    client_id: <%= ENV.fetch("GCS_CLIENT_ID") %>
+  bucket: <%= ENV.fetch("GCS_BUCKET") %>
